# SimCity

./: Cell.cpp  Cell.h  CommercialSystem.cpp  CommercialSystem.h  IndustrialSystem.cpp  IndustrialSystem.h  LICENSE  README.md  Region.cpp  Region.h  ResidentialSystem.cpp  ResidentialSystem.h  Statistics.cpp  Statistics.h  config.txt  main.cpp  region.csv
simcity/: CMakeLists.txt
simcity/include/: Region.hpp
simcity/include/config/: ConfigManager.hpp
simcity/include/errors/: ErrorHandler.hpp  SimCityException.hpp
simcity/include/pollution/: PollutionGrid.hpp  PollutionSystem.hpp
simcity/include/power/: PowerGrid.hpp  PowerSource.hpp  PowerSystem.hpp
simcity/include/zones/: Cell.hpp
simcity/include/zones/commercial/: CommercialManager.hpp  CommercialZone.hpp
simcity/include/zones/industrial/: IndustrialManager.hpp  IndustrialZone.hpp
simcity/include/zones/residential/: ResidentialManager.hpp  ResidentialZone.hpp
simcity/src/: Region.cpp  main.cpp
simcity/src/config/: ConfigManager.cpp
simcity/src/errors/: ErrorHandler.cpp
simcity/src/pollution/: PollutionGrid.cpp  PollutionSystem.cpp
simcity/src/power/: PowerGrid.cpp  PowerSource.cpp  PowerSystem.cpp
simcity/src/zones/: Cell.cpp
simcity/src/zones/commercial/: CommercialManager.cpp  CommercialZone.cpp
simcity/src/zones/industrial/: IndustrialManager.cpp  IndustrialZone.cpp
simcity/src/zones/residential/: ResidentialManager.cpp  ResidentialZone.cpp
